--- a/Bookify-client/Bookify/angular.json
+++ b/Bookify-client/Bookify/angular.json
@@ -37,7 +37,8 @@
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/custom-theme.scss",
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/ngx-spinner/animations/ball-scale-multiple.css"
             ],
             "scripts": [],
             "server": "src/main.server.ts",
@@ -111,5 +112,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "cdbf0f02-df0b-4343-b6fb-a0a302fa4e9c"
   }
 }
