--- a/Bookify-server/src/main/resources/application.properties
+++ b/Bookify-server/src/main/resources/application.properties
@@ -21,3 +21,8 @@ spring.mail.properties.mail.smtp.ssl.trust=*
 activation.cron=0 */1 * ? * *
 
 server.address=0.0.0.0
+
+server.ssl.key-store=classpath:static/root.p12
+server.ssl.key-store-password=2uCr0iUaP0kbBLv
+server.ssl.key-store-type=PKCS12
+server.ssl.key-alias=root
