--- a/PKISecurity/src/main/resources/application.properties
+++ b/PKISecurity/src/main/resources/application.properties
@@ -6,7 +6,9 @@ spring.datasource.password=ftnns
 spring.cache.type=none
 server.port=8081
 
-server.ssl.key-store=classpath:static/root.p12
+server.ssl.key-store=${SECURITY_PATH}root.p12
 server.ssl.key-store-password=2uCr0iUaP0kbBLv
 server.ssl.key-store-type=PKCS12
 server.ssl.key-alias=root
+
+security.path=${SECURITY_PATH}
