--- a/Bookify-client/Bookify/package.json
+++ b/Bookify-client/Bookify/package.json
@@ -37,6 +37,7 @@
     "moment": "^2.29.4",
     "ng-bootstrap": "^1.6.3",
     "ngx-spinner": "^16.0.2",
+    "node-forge": "^1.3.1",
     "rxjs": "~7.8.0",
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
