--- a/Bookify-client/Bookify/package.json
+++ b/Bookify-client/Bookify/package.json
@@ -33,6 +33,7 @@
     "file-saver": "^2.0.5",
     "file-server": "^2.2.1",
     "http-server": "^14.1.1",
+    "js-base64": "^3.7.7",
     "leaflet": "^1.9.4",
     "moment": "^2.29.4",
     "ng-bootstrap": "^1.6.3",
