--- a/Bookify-client/Bookify/angular.json
+++ b/Bookify-client/Bookify/angular.json
@@ -84,10 +84,9 @@
             }
           },
           "options": {
-            "browserTarget": "app:build",
             "ssl": true,
-            "sslKey": "/Users/olivera/Documents/Bezbednost-tajne/https-private.key",
-            "sslCert": "/Users/olivera/Documents/Bezbednost-tajne/https.pem"
+            "sslKey": "C:\\Users\\Dell\\Desktop\\security\\podaci\\https-private.key",
+            "sslCert": "C:\\Users\\Dell\\Desktop\\security\\podaci\\https.pem"
           },
           "defaultConfiguration": "development"
         },
