--- a/Bookify-server/src/main/resources/application.properties
+++ b/Bookify-server/src/main/resources/application.properties
@@ -36,3 +36,4 @@ spring.security.oauth2.client.registration.keycloak.scope=openid
 spring.security.oauth2.client.provider.keycloak.issuer-uri=http://localhost:8080/realms/SpringBootKeycloak
 spring.security.oauth2.client.provider.keycloak.user-name-attribute=preferred_username
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/SpringBootKeycloak
+spring.security.oauth2.client.registration.keycloak.redirect-uri=https://localhost:4200/*
