start with ldap

--- a/Bookify-server/src/main/resources/application.properties
+++ b/Bookify-server/src/main/resources/application.properties
@@ -37,3 +37,7 @@ spring.security.oauth2.client.provider.keycloak.issuer-uri=http://localhost:8080
 spring.security.oauth2.client.provider.keycloak.user-name-attribute=preferred_username
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/SpringBootKeycloak
 spring.security.oauth2.client.registration.keycloak.redirect-uri=https://localhost:4200/*
+
+spring.ldap.embedded.ldif=src/main/resources/server.ldif
+spring.ldap.embedded.base-dn=dc=example,dc=com
+spring.ldap.embedded.port=8389
