--- a/Bookify-client/Bookify/angular.json
+++ b/Bookify-client/Bookify/angular.json
@@ -85,8 +85,8 @@
           },
           "options": {
             "ssl": true,
-            "sslKey": "C:\\Users\\Dell\\Desktop\\security\\podaci\\https-private.key",
-            "sslCert": "C:\\Users\\Dell\\Desktop\\security\\podaci\\https.pem"
+            "sslKey": "/Users/olivera/Documents/Bezbednost-tajne/https-private.key",
+            "sslCert": "/Users/olivera/Documents/Bezbednost-tajne/https.pem"
           },
           "defaultConfiguration": "development"
         },
