--- a/Bookify-server/src/main/resources/application.properties
+++ b/Bookify-server/src/main/resources/application.properties
@@ -46,7 +46,7 @@ spring.security.oauth2.client.registration.keycloak.redirect-uri=https://localho
 spring.ldap.urls=ldap://localhost:10389
 
 # Base DN for LDAP searches
-spring.ldap.base=ou=system
+#spring.ldap.base=ou=system
 
 # User DN and password for authentication (if required)
 spring.ldap.username=uid=admin,ou=system
