set to correct client-id

--- a/Bookify-server/src/main/resources/application.properties
+++ b/Bookify-server/src/main/resources/application.properties
@@ -29,7 +29,7 @@ server.ssl.key-alias=https
 
 server.port=8082
 
-spring.security.oauth2.client.registration.keycloak.client-id=test-login
+spring.security.oauth2.client.registration.keycloak.client-id=login-app
 spring.security.oauth2.client.registration.keycloak.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.keycloak.scope=openid
 
