--- a/Bookify-server/src/main/resources/application.properties
+++ b/Bookify-server/src/main/resources/application.properties
@@ -27,9 +27,12 @@ server.ssl.key-store-password=https
 server.ssl.key-store-type=PKCS12
 server.ssl.key-alias=https
 
+server.ssl.trust-store=${SECURITY_PATH}/Bookify.jks
+server.ssl.trust-store-password=bf1886a09cbf41888f4a076caf235bcb
+
 server.port=8082
 
-spring.security.oauth2.client.registration.keycloak.client-id=test-login
+spring.security.oauth2.client.registration.keycloak.client-id=login-app
 spring.security.oauth2.client.registration.keycloak.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.keycloak.scope=openid
 
